name:                pushy-api
version:             0.1.0.1
synopsis:            api for pushy application
description:         api for pushy application
license:             BSD3
license-file:        LICENSE
author:              Ian Sullivan
maintainer:          Ian Sullivan
copyright:           2017 Ian Sullivan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pushy.Web
                     , Pushy.Authentication
                     , Pushy.Configuration
  build-depends:       base >= 4.7 && < 5
                     , Spock
                     , configurator
                     , HDBC
                     , HDBC-mysql
                     , text
  default-language:    Haskell2010

executable pushy-api-exe
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pushy-api
  default-language:    Haskell2010

test-suite pushy-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pushy-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iansullivan88/pushy-api
